<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivCoverPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_books"

        android:layout_marginBottom="8dp"/>

    <TextView android:id="@+id/tvBookTitle"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvBookAuthor"
        android:textColor="@color/textSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <TextView android:id="@+id/tvBookGenre"
        android:layout_width="wrap_content"
        android:textColor="@color/textSecondary"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvBookdescription"
        android:layout_width="wrap_content"
        android:textColor="@color/textSecondary"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnEditBook"
            android:text="@string/Edit"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/backgroundLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDeleteBook"
            android:text="@string/Delete"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/backgroundLight"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>