<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AdminDashboardActivity"
    android:background="@color/backgroundLight">

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#e27602"
            android:title="@string/admin_dashboard"
            android:titleTextColor="@android:color/white"
            android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <LinearLayout
            android:id="@+id/headerSection"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="#E59400">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_track_of_your_library_and_manage_books_smartly"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="8dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivBooksImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginEnd="8dp"
                android:gravity="left"
                android:src="@drawable/ic_stackbook"
            android:contentDescription="@string/books" />

            <ImageView
                android:id="@+id/ivPersonSticker"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/Admin"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_person_sticker" />
        </LinearLayout>

        <!-- Content Area -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        app:menu="@menu/nav_menu"
        android:layout_marginTop="60dp"
        app:headerLayout="@layout/nav_header_admin"
        app:itemTextAppearance="@style/NavMenuTextStyle"
        app:itemIconSize="28dp"  />
</androidx.drawerlayout.widget.DrawerLayout>
